    db.init()  # fills some default values to be used with Stalker

    # for any subsequent access just use (don't need to call db.init())
    db.setup()

* **Update:** Removed all **__init_on_load()** methods from all of the classes.
  It was causing SQLAlchemy to eagerly load relations, thus slowing down
  queries in certain cases (especially in Task.parent -> Task.children
  relation).

0.2.0.rc3
=========

* **New:** Added a new attribute to **Task** class called **responsible**.
* **Update:** Removed **Sequence.lead_id** use **Task.reponsible** instead.
* **Update:** Updated documentation to include documentation about
  Configuring Stalker with ``config.py``.
* **Update:** The ``duration`` argument in Task class is removed. It is somehow
  against the idea of having ``schedule_model`` and ``schedule_timing``
  arguments (schedule_model='duration' is kind of the same).
* **Update:** Updated task documentation.

0.2.0.rc2
=========

* **New:** Added **Version.created_with** attribute to track the environment or
  host program name that a particular Version instance is created with.

0.2.0.rc1
=========

* **Update:** Moved the Pyramid part of the system to another package called
  **stalker_pyramid**.
* **Fix:** Fixed ``setup.py`` where importing ``stalker`` to get the
  ``__version__`` variable causing problems.

0.2.0.b9
========

* **New:** Added **Version.latest_published_version** and
  **Version.is_latest_published_version()**.
* **Fix:** Fixed **Version.__eq__()**, now Stalker correctly distinguishes
  different Version instances.
* **New:** Added **Repository.to_linux_path()**,
  **Repository.to_windows_path()**, **Repository.to_osx_path()** and
  **Repository.to_native_path()** to the **Repository** class.
* **New:** Added **Repository.is_in_repo(path)** which checks if the given
  path is in this repo.

0.2.0.b8
========

* **Update:** Renamed **Version.version_of** attribute to **Version.task**.